# EnglishSpellChecker

./: Makefile.am  Makefile.in  README  configure  configure.ac
header/: Makefile.am  Makefile.in  str.c
res/testdata/: english
src/: Makefile.am  Makefile.in  hashtable.c  hashtable.h  spellchecker.c
